# src/routes/invoices/saleInvoice.ts
@@ -81,7 +81,7 @@ Route.post('/sale/approveInvoice', async (req: Request, res: Response) => {
     return res.send(respsone)
 });
 
-Route.patch('/sale/updateSerialNumber', async (req: Request, res: Response) => {
+Route.post('/sale/updateSerialNumber', async (req: Request, res: Response) => {
     const body = req.body;
     const { oldSerialNumber, newSerialNumber } = body;
     const controller = new SaleController(req);
